--- a/StarWarsRPG/index.html
+++ b/StarWarsRPG/index.html
@@ -21,6 +21,35 @@
 		.g {
 			border-color: green;
 		}
+
+		/** players **/
+		.players, .enemies-wrapper {
+			display: flex;
+			align-content: center;
+			justify-content: center;
+		}
+		.players .player {
+			width: 20%;
+		}
+		.enemies-wrapper .player {
+			width: 30%;
+		}
+		.player {
+			border: 1px solid black;
+			cursor: pointer;
+			margin: 10px;
+			padding: 10px;
+			transition: all .5s ease-out;
+		}
+
+		/** players **/
+		.enemies-wrapper{
+
+		}
+
+
+
+		/** stage **/
 		.stage-wrapper {
 			border: 3px solid black;
 			padding: 20px;
@@ -29,20 +58,6 @@
 			display: flex;
 			align-content: center;
 			justify-content: center;
-		}
-		.players {
-			display: flex;
-			align-content: center;
-			justify-content: center;
-		}
-		.players .player {
-			width: 20%;
-		}
-		.player {
-			border: 1px solid black;
-			cursor: pointer;
-			margin: 10px;
-			padding: 10px;
 		}
 		.dead {
 
@@ -88,14 +103,12 @@
 		</div>
 	</div>
 
-	<div class="enemies-wrapper">
-		<h2>Enemies</h2>
-		<div class="enemies">
-
-		</div>
+	<div class="enemies-wrapper" style="display: none;">
+		<h2>Choose Opponent</h2>
+		<div class="enemies"></div>
 	</div>
 
-	<div class="stage-wrapper b">
+	<div class="stage-wrapper">
 		<h2>Stage</h2>
 		<div class="stage">
 			<div class="hero-wrapper box r">
@@ -119,20 +132,11 @@
 	</div>
 
 	<div class="bottom-container">
-		<div class="enemies-wrapper box g">
-			<h4>Enemies</h4>
-			<div class="enemies">
-				<!-- enemies go here -->
-			</div>
-		</div>
-
-		<div class="dead-wrapper box g">
+		<div class="dead-wrapper g">
 			<h4>Dead</h4>
 			<div class="dead">
-				<!-- enemies go here -->
 			</div>
 		</div>
-
 	</div>
 
 
@@ -147,7 +151,7 @@
 			const attackBtnEl = $('.attack');
 			const heroEl = $('.hero');
 			const opponentEl = $('.opponent');
-			const enemiesContainerEl = $('.enemies');
+			const enemiesContainerEl = $('.enemies-wrapper');
 			const deadContainerEl = $('.dead');
 
 			const winsEl = $('.wins');
@@ -177,7 +181,8 @@
 				playerEl.on('click.one', function(){
 					var hero = $(this);
 					playerEl.off('click.one');
-					hero.appendTo(heroEl); // move hero to "stage"
+					//hero.appendTo(heroEl); // move hero to "stage"
+					moveAnimate(hero,heroEl);
 
 					heroPlayerEl = heroEl.find('.player');
 					Object.keys(heroStats).forEach(function(key, index){
@@ -188,31 +193,31 @@
 
 					// fade out choose character h2
 					$('.players-wrapper h2').slideUp();
+					enemiesContainerEl.slideDown();
 					enemiesSetup();
 				});
 			};
 
 			function enemiesSetup(){
 				playersContainerEl.find('.player').appendTo(enemiesContainerEl); // move remaining players to "enemies"
-
 				var enemies = enemiesContainerEl.find('.player');
 				enemies.on('click.two', function(){
-					var opponent = $(this)
+					var opponent = $(this);
 					enemies.off('click.two');
 					opponentSetup(opponent);
 				});
 			};
 
 			function opponentSetup(opponent){
-					opponent.appendTo(opponentEl); // move enemy to "stage"
+					moveAnimate(opponent,opponentEl); // move enemy to "stage"
 					opponentPlayerEl = opponentEl.find('.player');
 					Object.keys(opponentStats).forEach(function(key, index){
 						opponentStats[key] = opponentPlayerEl.attr('data-' + key);
 					});
 					opponentStats['gameHealthPts'] = opponentPlayerEl.attr('data-healthPts');
-					console.log('opponentStats')
-					console.log(opponentPlayerEl);
-					console.log(opponentStats);
+					// console.log('opponentStats')
+					// console.log(opponentPlayerEl);
+					// console.log(opponentStats);
 					// before any attack make sure hero attack is reset
 					heroStats['gameAttactPwr'] = heroPlayerEl.attr('data-attackPwr');
 					attack();
@@ -225,12 +230,13 @@
 				attackBtnEl.on('click.attk', function(){
 					// reduce opponent healthPts by attackPwr
 					heroStats.gameAttactPwr = parseInt(heroStats.attackPwr) * attackCtr;
-					console.log('heroStats.gameAttactPwr ' + heroStats.gameAttactPwr);
+					// console.log('heroStats.gameAttactPwr ' + heroStats.gameAttactPwr);
 					let oppGameHP = opponentStats.gameHealthPts - heroStats.gameAttactPwr;
 					if (oppGameHP <= 0){
 						// dead
 						alert('opponent dead');
-						opponentPlayerEl.appendTo(deadContainerEl);
+						// opponentPlayerEl.appendTo(deadContainerEl);
+						moveAnimate(opponentPlayerEl,deadContainerEl);
 						attackCtr = 1;
 						attackBtnEl.attr('disabled', 'disabled');
 						pickNewOpponent();
@@ -257,7 +263,7 @@
 				getRemainingEnemies.on('click', function(){
 					opponentSetup($(this));
 					heroStats.gameAttactPwr = parseInt(heroStats.attackPwr);
-					console.log('pick heroStats.gameAttactPwr: ' + heroStats.gameAttactPwr);
+					// console.log('pick heroStats.gameAttactPwr: ' + heroStats.gameAttactPwr);
 					attackBtnEl.off('click.attk');
 					attack();
 				});
@@ -268,6 +274,28 @@
 
 		starWarsRPG();
 
+		function moveAnimate(element, newParent){
+			//Allow passing in either a jQuery object or selector
+			element = $(element);
+			newParent= $(newParent);
+
+			var oldOffset = element.offset();
+			element.appendTo(newParent);
+			var newOffset = element.offset();
+
+			var temp = element.clone().appendTo('body');
+			temp.css({
+					'position': 'absolute',
+					'left': oldOffset.left,
+					'top': oldOffset.top,
+					'z-index': 1000
+			});
+			element.hide();
+			temp.animate({'top': newOffset.top, 'left': newOffset.left}, 'slow', function(){
+				 element.show();
+				 temp.remove();
+			});
+	}
 
 	});
 </script>
