tidy code & fix styles

--- a/StarWarsRPG/index.html
+++ b/StarWarsRPG/index.html
@@ -12,6 +12,7 @@
 			<h1>STARWARS RPG</h1>
 		</header>
 		<div class="pre-stage-wrapper clearfix">
+			<div class="message" style="display: none;"></div>
 			<div class="players-wrapper">
 				<h2>Choose character</h2>
 				<div class="players">
@@ -39,13 +40,6 @@
 			<div class="enemies-wrapper" style="display: none;">
 				<h2>Choose Opponent</h2>
 				<div class="enemies"></div>
-			</div>
-
-			<div class="fight" style="display: none;">
-				<h2>FIGHT!</h2>
-			</div>
-			<div class="you-died" style="display: none;">
-				<h2>YOU DIED!</h2>
 			</div>
 		</div>
 		<div class="stage-wrapper">
