--- a/CrystalsCollector/index.html
+++ b/CrystalsCollector/index.html
@@ -41,11 +41,15 @@
 						</div>
 					</div>
 				</div>
-				<div class="row crystals">
-					<div class="col-sm-3"><button class="btn cry-1">1</button></div>
-					<div class="col-sm-3"><button class="btn cry-2">2</button></div>
-					<div class="col-sm-3"><button class="btn cry-3">3</button></div>
-					<div class="col-sm-3"><button class="btn cry-4">4</button></div>
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="row crystals">
+							<div class="col-sm-3"><button class="btn cry-1">1</button></div>
+							<div class="col-sm-3"><button class="btn cry-2">2</button></div>
+							<div class="col-sm-3"><button class="btn cry-3">3</button></div>
+							<div class="col-sm-3"><button class="btn cry-4">4</button></div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
